# MedicalTextAutocomplete

./: .gitignore  Makefile  README.md  dvc.yaml  pyproject.toml
db/: init.sh
docs/: worklog.md
notebooks/native/: BioGPT.ipynb  Mistral7b.ipynb  RuBioRoBERTa.ipynb
src/: __init__.py
src/data/: cr_parser.py  db_utils.py  exceptions.py  get_data.py  test.html  types.py
src/data/params/: sources.yml
